    * Switch from pyusb to libusb1 - deprecates libusb0.dll on Windows
    * Switch firmware to use shared usb library
    * Add `as_int` parameter to `scope.get_last_trace()` to return traces as integers
    * Add driver detection for Windows
    * Add force and bitstream option to `cw.scope()`
    * Improve 50-naeusb.rules
    * Add SimpleSerial 2.1 and deprecate SimpleSerial 2.0 

  Fixes:
    * Fix SS_VER_1_X and XMega simplserial-rsa
    * Fix SSV2 unstuff data for >30 zeros
    * Fix AVR lock bits read
    * Fix nano connect status
    * Explicit memory ordering in bootloader-glitch
    * Cast analyzer CPA calculations to long double to avoid precision issues in large projects
    * Fix Pro screen getting stuck when capturing

V5.5
  New Features:
    * Re-add SAKURA-G support
    * **TraceWhisperer cleanup + convenience functions**
    * ChipWhisperer firmware `auto_program()`
    * **Add segmented capture to ChipWhisperer, allowing for super fast capture**
    * **Add simpleserial-ecc**
    * **New demo: uECC attack**
    * **New ChipWhisperer Firmware: CDC serial ports for UART communication (i.e. communication with `"COMX"`/`"/dev/ttyACMX"`**
    * **New target class: SimpleSerial2_CDC with automatic serial port detection (no need to figure out `"COMX"`/`"/dev/ttyACMX"`)**
    * Add simpleserial documentation (thanks @coastalwhite !)
    * Add new simpleserial commands to get available commands
    * Add maskedAES for more targets (thanks @jmichelp !)
    * Add better method for loading new CW bitstream
    * Add avr-gcc and arm-gcc to installer (optional)

  Fixes:
    * Add CWPro aux_out
    * Update ESP32 build for newer build system version
    * Reset Xmega if programming fails (should prevent programming from immediately failing next call)
    * Setup script improvements
    * Fix outdated 99-rules.newae
    * Fix voltage range on CW305 VCCINT
    * Fix STM32F4 HW floating point (thanks @mcsmonk !)